Fix : decrease of the z-index for the set goal button

--- a/css/badgeos-set-goals-front.css
+++ b/css/badgeos-set-goals-front.css
@@ -5,7 +5,7 @@
     position:absolute; 
     top: 0; 
     right:10px; 
-    z-index: 10;
+    z-index: 5;
 }
 .badgeos-achievements-list-item .goal-action {
     float: left;
